tests/snapshots/tcp__security-count-sh.snap
---
source: tests/tcp.rs
expression: count

---
SecurityCount {
    send: [
        12,
        12,
        24,
        108,
        0,
        1,
        8,
        0,
        8,
        0,
        78,
        4,
        1,
        0,
        117,
        199,
        51,
        1,
    ],
    market: 1,
    count: 18065,
}
