tests/snapshots/tcp__security-list-send.snap
---
source: tests/tcp.rs
expression: list.send

---
[
    12,
    1,
    24,
    100,
    1,
    1,
    6,
    0,
    6,
    0,
    80,
    4,
    0,
    0,
    0,
    0,
]
